# passport-strategies

./: Cargo.toml  LICENSE-MIT  README.md
examples/: actix-web.rs  axum.rs  discord.rs  github.rs  google.rs  microsoft.rs
src/: basic_client.rs  error.rs  lib.rs  passport.rs  strategies.rs
src/strategies/: constants.rs  mod.rs  strategies.rs
