[package]
name = "passport-strategies"
version = "0.1.7"
authors = ["Bob Hawkins <Kinghawkins61@gmail.com>"]
license = "MIT"
description = "A thin wrapper on top of oauth2-rs that simplifies oauth2 authentication."
repository = "https://github.com/bob-hawkins/passport-strategies"
edition = "2021"
keywords = ["oauth2", "passport", "strategies", "authentication"]
readme = "README.md"
exclude = ["examples/*", ".vscode/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.79"
colored = "2.1.0"
oauth2 = "4.4.2"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"


[dev-dependecies]
actix-web = "4.4.0"
tokio = { version = "1.35.1", features = ["full"] }
pretty_env_logger = "0.5.0"
